--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,7 @@ created from opaque machine learning techniques).</p>
 least its activities may need to be protected even in cases in which its members are guaranteed to
 remain anonymous. We refer to this as "group privacy." Conversely, <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-26">people</a> may wish to protect
 knowledge that they are members of the group even though the existence of the group and its actions
-may be well known (eg. membership in a dissidents movement under authoritarian rule), which we call
+may be well known (e.g. membership in a dissidents movement under authoritarian rule), which we call
 "membership privacy". An example <a data-link-type="dfn|abstract-op" href="#dfn-privacy-violation" class="internalDFN" id="ref-for-dfn-privacy-violation-1">privacy violation</a> for the former case
 is the fitness app Strava that did not reveal individual behaviour or legal identity but published heat
 maps of popular running routes. In doing so, it revealed secret US bases around which military
@@ -1477,7 +1477,7 @@ See [<cite><a class="bibref" data-link-type="biblio" href="#bib-fingerprinting-g
 <a data-link-type="dfn|abstract-op" href="#dfn-fingerprint" class="internalDFN" id="ref-for-dfn-fingerprint-2">fingerprinting</a>.</p>
 <p>Supercookies occur when a user agent stores data for a site but makes that data more
 difficult to clear than other cookies or storage, typically because of a bug, of features
-relating to cache storage and network state (eg. ETag, HSTS), or
+relating to cache storage and network state (e.g. ETag, HSTS), or
 because the browser restores the browser vendor's cookies when local state is cleared.
 <a href="https://www.w3.org/TR/fingerprinting-guidance/#clearing-all-local-state">Fingerprinting
 Guidance § Clearing all local state</a> discusses how specifications can help
@@ -1836,7 +1836,7 @@ to that <a data-link-type="dfn|abstract-op" href="#dfn-third-parties" class="int
 <li><p>there is a strong level of confidence that no <a data-link-type="dfn|abstract-op" href="#dfn-third-parties" class="internalDFN" id="ref-for-dfn-third-parties-4">third party</a> can match the <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-32">data</a>
 with any data other than that obtained through interactions with the <a data-link-type="dfn|abstract-op" href="#dfn-first-party-0" class="internalDFN" id="ref-for-dfn-first-party-0-3">first party</a>;</p>
 </li>
-<li><p>any <a data-link-type="dfn|abstract-op" href="#dfn-third-parties" class="internalDFN" id="ref-for-dfn-third-parties-5">third party</a> receiving such <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-33">data</a> is barred (eg. based on legal terms)
+<li><p>any <a data-link-type="dfn|abstract-op" href="#dfn-third-parties" class="internalDFN" id="ref-for-dfn-third-parties-5">third party</a> receiving such <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-33">data</a> is barred (e.g. based on legal terms)
 from sharing it further;</p>
 </li>
 <li><p>technical measures exist to prevent re-identification or the joining of
@@ -2019,7 +2019,7 @@ time or resources is a violation of privacy.</p>
 <p><dfn id="dfn-unwanted-information" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">Unwanted information</dfn> covers a broad range of unsolicited communication, from messages
 that are typically harmless individually but that become a nuisance in aggregate (spam) to the
 sending of images that will cause shock or disgust due to their graphic, violent, or explicit nature
-(eg. pictures of one's genitals). While it is impossible, in a communication system involving many
+(e.g. pictures of one's genitals). While it is impossible, in a communication system involving many
 <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-82">people</a>, to offer perfect protection against all kinds of unwanted information, steps can be
 taken to make the sending of such messages more difficult or more costly, and to make the senders
 more accountable. Examples of mitigations include:</p>
