--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@ their data not be sold or shared.) The [=user=] is effectively delegating the ex
 of their [=opt-out=] to their [=user agent=], which helps rectify [=automation asymmetry=].
 
 Under this model, a [=global opt-out=] signal should not be understood as a decision that a
-[=person=] made a while ago when they flipped a setting or chose to user a specific
+[=person=] made a while ago when they flipped a setting or chose to use a specific
 [=user agent=] but rather as a decision that they have chosen to automatically reaffirm with
 every interaction.
 
