--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@ of their [=opt-out=] to their [=user agent=], which helps rectify [=automation a
 
 Under this model, a [=global opt-out=] signal should not be understood as a decision that a
 [=person=] made a while ago when they flipped a setting or chose to use a specific
-[=user agent=] but rather as a decision that they have chosen to automatically reaffirm with
+[=user agent=] but rather as a preference that they have chosen to automatically reaffirm with
 every interaction.
 
 ### Privacy Labour {#privacy-labour}
