Apply suggestions from code review
accepting inline suggestions (other changes to be made in a separate commit just for workflow reasons)

Co-authored-by: Robin Berjon <robin@berjon.com>

--- a/index.html
+++ b/index.html
@@ -1968,8 +1968,8 @@ included or implicated.
 <div class="practice">
   <p>
     <span class="practicelab" id="principle-consent-otherpeople">
-      [=Actors=] should provide accessible functionality to access, correct and remove data about
-      [=people=] to those [=people=] when that data may have been provided by someone else.
+      [=Actors=] should provide functionality to access, correct, and remove data about
+      [=people=] to those [=people=] when that data has been provided by someone else.
     </span>
   </p>
 </div>
