re-wording about consent implying consent of non-user formatting

--- a/index.html
+++ b/index.html
@@ -1955,15 +1955,13 @@ Examples of alternatives to interrupting users with consent requests include:
 <div class="practice">
 <p>
   <span class="practicelab" id="principle-consent-withdraw">
-  It should be as easy for a [=person=] to check what consent they have given,
-	to withdraw consent, or to opt out or object,
-	as to give consent.
+  It should be as easy for a [=person=] to check what consent they have given, to withdraw consent,
+  or to opt out or object, as to give consent.
   </span>
 </p>
 </div>
 
-A [=person=] providing consent does not imply consent from other [=people=] whose data may be
-included or implicated.
+A [=person=] may share data about other [=people=] (e.g. a picture with both that person and others). If that person consents to the processing of that data, this does not imply that those other people have consented as well.
 
 <div class="practice">
   <p>
