--- a/index.html
+++ b/index.html
@@ -1708,23 +1708,22 @@ measures to help [=wards=] who realize that their [=guardian=] isn't acting in t
 interest.</span>
 </div>
 
-
-Some classes of vulnerable people tend to be unable to make good decisions about their own web use,
-and need a <dfn>guardian</dfn> to help them. Children are a widely recognized example of this class,
-with their parents often acting as their [=guardians=]. A person with a [=guardian=] is known as
+Some [vulnerable people](#vulnerability) need a <dfn>guardian</dfn> to help them make good
+decisions about their own web use (e.g. children, with their parents often
+acting as their [=guardians=]). A person with a [=guardian=] is known as
 a <dfn>ward</dfn>.
 
-Many legal systems treat these guardianship relationships as a set of rights that the [=guardian=]
-possesses. We prefer to instead think of the [=ward=] having a right to make informed decisions and
-exercise their autonomy. Their [=guardian=] then has an _obligation_ to help their [=ward=] do so
-when the [=ward=]'s abilities aren't sufficient, even if that conflicts with the [=guardian=]'s
-desires. In practice, many [=wards=] discover that their [=guardian=] is not making decisions in the
-[=ward=]'s best interest, and it's critical that such [=wards=] have a way to escape their
-misbehaving guardian.
+The [=ward=] has a right to make informed decisions and exercise their
+autonomy regarding their right to privacy. Their [=guardian=] has an
+_obligation_ to help their [=ward=] do so when the [=ward=]'s abilities aren't
+sufficient, even if that conflicts with the [=guardian=]'s desires. In
+practice, many [=guardians=] do not make decisions in their [=ward=]'s best
+interest, and it's critical that web platform technologies do not exacerbate
+the risks inherant in this situation.
 
-Historically, the Web has provided exactly this escape route, and [=user agents=] should preserve
-that feature by correctly balancing a benevolent [=guardian=]'s need to protect their [=ward=] from
-dangers against other [=wards=]' need to protect themselves from their misbehaving [=guardians=].
+[=User agents=] should balance a benevolent [=guardian=]'s need to protect
+their [=ward=] from dangers, against a [=wards=]' need to protect themselves
+if they have a malicious [=guardian=].
 
 <aside class="example" id="example-protective-parent" title="Protective parents">
 
