Guardians: Turns the principle into explanatory text, and links it to Device Owners, as a higher level expression of the same thing.

--- a/index.html
+++ b/index.html
@@ -1890,14 +1890,6 @@ has their own right to privacy.
 
 ### Guardians {#guardians}
 
-<div class="practice">
-<span class="practicelab" id="principle-guardians-have-responsibilities">
-A [=user agent=] may only provide information about a [=ward=] to a [=guardian=] for the purpose of
-helping that [=guardian=] uphold their responsibilities to their [=ward=]. This system must include
-measures to help [=wards=] who realize that their [=guardian=] isn't acting in the [=ward=]'s
-interest.</span>
-</div>
-
 Some [vulnerable people](#vulnerability) need a <dfn>guardian</dfn> to help them make good
 decisions about their own web use (e.g. children, with their parents often
 acting as their [=guardians=]). A person with a [=guardian=] is known as
@@ -1915,6 +1907,13 @@ the risks inherant in this situation.
 their [=ward=] from dangers, against a [=wards=]' need to protect themselves
 if they have a malicious [=guardian=].
 
+[=User agents=] can protect vulnerable [=wards=] by complying with the principles in
+[[[#device-administrators]]], and may only provide information about a [=ward=]
+to a [=guardian=] for the purpose of helping that [=guardian=] uphold their
+responsibilities to their [=ward=]. The mechanism for doing so must include
+measures to help [=wards=] who realize that their [=guardian=] isn't acting in
+the [=ward=]'s interest.
+
 <aside class="example" id="example-protective-parent" title="Protective parents">
 
 A parent might configure a small child's [=user agent=] to block access to violent content until the
@@ -1929,12 +1928,6 @@ homophobic or transphobic parent, that parent might have configured their [=user
 block or inform the parent when the child visits web pages about LGBT-related subjects. The [=user
 agent=] needs to warn the child about how it's configured so that the child can know to ask a better
 [=guardian=] for access to the help they need.
-
-</aside>
-
-<aside class="issue">
-
-Add crosslinks to [[[#device-administrators]]].
 
 </aside>
 
