--- a/index.html
+++ b/index.html
@@ -1554,7 +1554,7 @@ helps different users to react appropriately.
 See [[[#guardians]]] for more detail on how this principle applies to
 vulnerable people with [=guardians=].
 
-## Harassment
+## Abuse
 
 <div class="practice">
   <p>
