--- a/index.html
+++ b/index.html
@@ -1944,6 +1944,13 @@ Attempts to obtain consent to [=processing=] that is not in accordance with the 
 true preferences result in imposing unwanted [=privacy labour=] on the person, and may
 result in people erroneously giving consent that they regret later.
 
+An [=actor=] should not prompt a [=person=] for consent if the
+person is unlikely to have sufficient information to make an informed decision to consent or not.
+In considering whether or not a person is sufficiently informed to be asked for consent,
+actors should be realistic in assessing how much time and effort would be required to understand the
+processing for which they are asking for consent.
+Simply providing a link to a complex policy is unlikely to mean that the person is informed.
+
 <div class="practice">
 <p>
   <span class="practicelab" id="principle-minimize-consent-requests">
