Apply suggestions from code review
Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@ the success of advertising campaigns. Even this small amount of information is s
 # Principles for Privacy on the Web
 
 This section describes a set of principles designed to apply to the web
-[=context=] in general. More specific [=contexts=] on the web may need more
+[=context=] in general. Specific [=contexts=] on the web may need more
 constraints or other considerations. In time, we expect to see more specialized
 privacy principles published, for more specific [=contexts=] on the web.
 
@@ -2122,14 +2122,14 @@ are employees with respect to their employers, are facing a steep asymmetry of p
 are people in some situations of intellectual or psychological impairment, are
 refugees, etc.
 
-## Context {#context}
+## Contexts {#context}
 
 A <dfn>context</dfn> is a physical or digital environment in which [=people=] interact with other
 [=actors=], and which the [=people=] understand as distinct from other [=contexts=].
 
 A [=context=] is not defined in terms of who owns or controls it. Sharing
-[=data=] between different [=contexts=] of a single company is just as much
-a [=privacy violation=] as if the same data were shared between unrelated [=actors=].
+[=data=] between different [=contexts=] of a single company is
+a [=privacy violation=], just as if the same data were shared between unrelated [=actors=].
 
 ## Server-Side Actors {#parties}
 
