Make this more actionable

--- a/index.html
+++ b/index.html
@@ -1458,6 +1458,8 @@ people than it would have been through other methods.
 <div class="practice">
 <p>
   <span class="practicelab" id="principle-vulnerability">
+    System designers
+    should not assume that particular information is or is not sensitive.
     Whether information is considered sensitive can vary depending on a
     [=person=]'s circumstances, the [=context=] of an interaction, and can
     change over time.
