'update acks to match input provided'

--- a/index.html
+++ b/index.html
@@ -2349,16 +2349,24 @@ Some of the definitions in this document build on top of the work in
 [[[tracking-dnt]]].
 
 The following people, in alphabetical order of their first name, were instrumental
-in producing this document:
+in producing this document and made invaluable contributions:
 Amy Guy,
+Ben Savage,
 Chris Needham,
 Christine Runnegar,
 Dan Appelquist,
 Don Marti,
+François Daoust,
+Ian Jacobs,
+Irene Knapp,
 Jonathan Kingston,
+Kyle Den Hartog,
+Mark Nottingham,
+Martin Thomson,
 Nick Doty,
 Peter Snyder,
 Sam Weiler,
+Shubhie Panicker,
 Tess O'Connor, and
 Wendy Seltzer.
 
