Apply suggestions from code review
Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

--- a/index.html
+++ b/index.html
@@ -1086,13 +1086,13 @@ according to their [=users=]' wishes.
 <div class="practice">
 <span class="practicelab">[=Sites=], [=user agents=], and other [=actors=]
 should minimize the amount of [=personal data=] they transfer. [=User agents=]
-should share data only when needed, in alignment with a user's goals and
+should share data only when it helps a user's goals and
 interests. Web APIs should be designed to minimize the amount of data that
 sites need to request.</span>
 </div>
 
 Data minimization limits the risks of data being disclosed or misused. It also
-helps [=user agents=] more meaningfully explain the decisions their users need
+helps [=user agents=] and other [=actors=] more meaningfully explain the decisions their users need
 to make. For more information, see [[[Data-Minimization]]].
 
 Web APIs should be designed to minimize the amount of data that sites need to
