Apply suggestions from code review
Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

--- a/index.html
+++ b/index.html
@@ -1738,7 +1738,7 @@ appropriately.
 Link this to [[[#guardians]]].
 </aside>
 
-## Abuse
+## Protecting users from abusive behaviour
 
 <div class="practice">
   <p>
@@ -1763,7 +1763,7 @@ exacerbated by other violations of privacy.
 Harassment may include: sending [=unwanted information=]; directing others to contact
 or bother a person ("dogpiling"); disclosing [sensitive information](#sensitive-information) about a person; posting false information about a person; impersonating a person; insults; threats; and hateful or demeaning speech.
 
-Disclosure of identifying or contact information (including "doxxing") can be used to send often persistent [=unwanted information=] that amounts to harassment.
+Disclosure of identifying or contact information (including "doxxing") can often be used to cause additional attackers to send persistent [=unwanted information=] that amounts to harassment.
 Disclosure of location information can be used to intrude on a
 person's physical safety or space.
 
@@ -1773,11 +1773,11 @@ hosts or intermediaries are supportive of or complicit in the abuse.
 Effective reporting is likely to require:
 
 * standardized mechanisms to identify abuse reporting contacts;
-* visible, usable ways provided by sites and user agents to report abuse;
+* sites and user agents to provide visible and usable ways to report abuse;
 * identifiers to refer to senders and content;
 * the ability to provide context and explanation of harms;
 * people responsible for promptly responding to reports;
-* tools for pooling mitigation information (see [[[#example-10]]]).
+* tools for pooling mitigation information (see [[[#example-reducing-unwanted-information]]]).
 
 <aside class="note">
   Some useful research overviews of online harassment include: [[?PEW-Harassment]],
@@ -1788,13 +1788,14 @@ Effective reporting is likely to require:
 that are typically harmless individually but that become a nuisance in aggregate (spam) to the
 sending of explicit, graphic, or violent images.
 
-<aside class="example">
 System designers should take steps to make the sending of unwanted information more difficult
 or more costly, and to make the senders more accountable.
 
+
+<aside class="example" id="example-reducing-unwanted-information">
 Examples of mitigations include:
 
-* Restricting what new users of a service can post, e.g. limiting links and media until they have
+* Restricting what new users of a service can post, e.g. limiting links and media until a user has
   interacted a sufficient number of times over a given period with a larger group. This helps to
   raise the cost of producing [sock puppet accounts](https://en.wikipedia.org/wiki/Sock_puppet_account) and gives new users time to understand local norms before posting.
 * Only accepting communication between [=people=] who have an established relationship of some kind,
