Clarify the forward reference to partitions.

--- a/index.html
+++ b/index.html
@@ -1071,8 +1071,9 @@ to one [=site=] that they have a particular identity on another [=site=]).
 Similarly, a [=user agent=] can help its [=user=] by preventing or supporting
 [=recognition=] across *repeat* visits to the *same* [=site=].
 
-[=User agents=] should do their best to distinguish [=contexts=] within a site,
-and adjust their [=partitions=] when necessary.
+[=User agents=] should do their best to distinguish [=contexts=] within a site
+and adjust their [=partitions=] to prevent or support [=recognition=] across those intra-site [=contexts=]
+according to their [=users=]' wishes.
 
 ## Data Minimization {#data-minimization}
 
