--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,7 @@ Different [=users=] will want to share different kinds and amounts of
 [=ancillary data=] with [=sites=]. Some [=people=] will not want to share any
 [=ancillary data=] at all.
 
-Users may be encouraged to share [=ancillary data=] if it is aggregated with
+Users may be willing to share [=ancillary data=] if it is aggregated with
 the data of other users, or [=de-identified=]. This can be useful
 when [=ancillary data=] contributes to a collective benefit in a way
 that reduces privacy threats to individuals (see <a href="#principle-collective-privacy">collective
