--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@ helps [=user agents=] and other [=actors=] more meaningfully explain the decisio
 to make. For more information, see [[[Data-Minimization]]].
 
 Web APIs should be designed to minimize the amount of data that sites need to
-request to carry out their users' goals. They should also provide granular
+request to pursue their users' goals and interests. They should also provide granular
 user controls over [=personal data=] that is communicated to [=sites=].
 
 The principle of data minimization applies to all [=personal data=], even if it
