--- a/index.html
+++ b/index.html
@@ -1344,8 +1344,8 @@ browser fingerprint.
 ## Information access {#information}
 
 <div class="practice">
-  <span class="practicelab">Web APIs must not weaken [=access guards=] which
-  protect users from [=inappropriate=] exposure of their information.</span>
+  <span class="practicelab">New Web APIs must guard users' information at least
+  as well as existing APIs that are expected to stay in the web platform.</span>
 </div>
 
 The many APIs available to websites expose lots of data that can be combined
