--- a/index.html
+++ b/index.html
@@ -1694,7 +1694,9 @@ when that disclosure is necessary to enforce reasonable constraints on use of
 the device.
 </span>
 </div>
-
+<div class="note">
+See [[[#guardians]]] for more detail on how this principle applies to vulnerable people with [=guardians=].
+</div>
 Computing devices have <dfn data-lt="device owner">owners</dfn>, who have
 <dfn>administrator</dfn> access to the devices in order to install and
 configure the programs that run on them. As a program running on a device,
